# hera_control

./: 99-hera-devices.rules  CMakeLists.txt  README.md  install_dependencies.sh  package.xml
arduino/head/: head.ino
config/: dynamixel_controller.yaml  head_controller.yaml  joint_trajectory_controller.yaml  joint_trajectory_controller_gazebo.yaml  manip_controller.yaml
config/manipulator/: dynamixel_controller.yaml  manip3.yaml  manip_controller.yaml
launch/: both.launch  dynamixel_controller.launch  head.launch  joint_trajectory_controller.launch  manip.launch  manip_controller.launch  robot_base.launch
launch/base/: robot_base.launch
launch/head/: head.launch
launch/manipulator/: controller_utils.launch  joint_trajectory_controller.launch  manip3.launch
msg/: Head_Goal.msg  Joint_Goal.msg
src/base/: odom.py  utils.py
src/head/: head.py
src/manipulator/: furniture.py  gazebo_control.py  joints.py  main.py  manipulator.py  motions.py  new_manipulator.py  objects_selection.py  poses.py  save_pose.py  trajectory_server.cpp
srv/: Furniture.srv  Head_service.srv  Joint_service.srv  Manip.srv  Manip3.srv  Raposo_service.srv
